--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   </head>
   <body>
     <!-- -------------Header Section Here   1111111111------------ -->
+
     <div class="header">
       <div class="contact-header">
         <div
@@ -40,7 +41,7 @@
           </div>
         </div>
       </div>
-   
+
       <div
         class="container menu-header d-flex justify-content-between align-items-center"
       >
@@ -58,6 +59,7 @@
     </div>
 
     <!-- ------------------Main content Section----------------- -->
+
     <div class="main-content">
       <div class="contents">
         <div class="slider-image">
@@ -67,89 +69,430 @@
     </div>
 
     <!-- ---------------Container Product Section--------------->
-    <div class="container product mb-5">
-      <div class="row ">
-        <div class="col-lg-2 main-circle">     
-         <div class="product-circle">
-          <img src="Images/Products//Ellipse-7.png" alt="" srcset="" />
-         </div>
-         <div class="product-text">Men’s T-Shirts
-        </div>
+
+    <div class="container product">
+      <div class="row">
+        <div class="col-lg-2 main-circle">
+          <div class="product-circle">
+            <img src="Images/Products//Ellipse-7.png" alt="" srcset="" />
+          </div>
+          <div class="product-text">Men’s T-Shirts</div>
         </div>
         <div class="col-lg-2 main-circle">
           <div class="product-circle">
             <img src="Images/Products//Ellipse-8.png" alt="" srcset="" />
-           </div>
-           <div class="product-text">Women’s Wear
           </div>
+          <div class="product-text">Women’s Wear</div>
         </div>
         <div class="col-lg-2 main-circle">
           <div class="product-circle">
             <img src="Images/Products//Ellipse-9.png" alt="" srcset="" />
-           </div>
-           <div class="product-text">Winter Collections
           </div>
+          <div class="product-text">Winter Collections</div>
         </div>
         <div class="col-lg-2 main-circle">
           <div class="product-circle">
             <img src="Images/Products//Ellipse-10.png" alt="" srcset="" />
-           </div>
-           <div class="product-text">Hooded T-Shirts
           </div>
+          <div class="product-text">Hooded T-Shirts</div>
         </div>
         <div class="col-lg-2 main-circle">
           <div class="product-circle">
             <img src="Images/Products//Ellipse-11.png" alt="" srcset="" />
-           </div>
-           <div class="product-text">Polo Neck T-Shirts
           </div>
+          <div class="product-text">Polo Neck T-Shirts</div>
         </div>
         <div class="col-lg-2 main-circle">
           <div class="product-circle">
             <img src="Images/Products//Ellipse-12.png" alt="" srcset="" />
-           </div>
-           <div class="product-text">Full Sleeves T-Shirts
+          </div>
+          <div class="product-text">Full Sleeves T-Shirts</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ---------------Container Product Banner/card--------------->
+
+    <div class="container product mb-5">
+      <div class="row gy-2">
+        <div class="col-md-6">
+          <div class="main-card-product">
+            <img src="/Images/ProductBanner/Product-1.png" alt="" srcset="" />
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="main-card-product">
+            <img src="/Images/ProductBanner/Product-2.png" alt="" srcset="" />
+          </div>
+        </div>
+      </div>
+      <div class="row mt-3 gy-2">
+        <div class="col-md-4">
+          <div class="product-card-image">
+            <img src="/Images/ProductBanner/Product-3.png" alt="" srcset="" />
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="product-card-image">
+            <img src="/Images/ProductBanner/Product-4.png" alt="" srcset="" />
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="product-card-image">
+            <img src="/Images/ProductBanner/Product-5.png" alt="" srcset="" />
           </div>
         </div>
       </div>
     </div>
 
-<!-- ---------------Container Product Banner/card--------------->
-<div class="container product mb-5">
-  <div class="row gy-2">
-    <div class="col-md-6">
-      <div class="main-card-product">
-        <img src="/Images/ProductBanner/Product-1.png" alt="" srcset="">
-      </div>
+    <div class="container text-center mt-5 product-heading-text">
+      <span>Trending T-Shirts</span>
     </div>
-    <div class="col-md-6">
-      <div class="main-card-product">
-        <img src="/Images/ProductBanner/Product-2.png" alt="" srcset="">
-      </div>
-    </div>
-  </div>
-  <div class="row mt-3 gy-2">
-    <div class="col-md-4">
-      <div class="product-card-image">
-        <img src="/Images/ProductBanner/Product-3.png" alt="" srcset="">
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="product-card-image">
-        <img src="/Images/ProductBanner/Product-4.png" alt="" srcset="">
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="product-card-image">
-        <img src="/Images/ProductBanner/Product-5.png" alt="" srcset="">
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="container text-center mt-5 product-heading-text">
-  <span>Trending T-Shirts</span>
-</div>
+   <!-- -------------------Product Cards------------------- -->
 
+    <div class="container mt-5">
+      <div class="row gy-5">
+
+        <div class="col-md-3">
+          <div class="main-product-card">
+            <div class="tranding-card">
+              <img
+                src="Images/Products/Rectangle-3.png"
+                alt="Men Henley Nec Full Sleeve Red Wine"
+              />
+              <div class="social-container">
+                <div class="tranding-card-svg">
+                  <div class="product-carts">
+                    <div class="social-image">
+                      <img src="Images/Svg/Heart.svg" alt="Error" />
+                    </div>
+                  </div>
+                  <div class="product-carts">
+                    <div class="social-image">
+                      <img src="Images/Svg/Share.svg" alt="Error" />
+                    </div>
+                  </div>
+                  <div class="product-carts">
+                    <div class="social-image">
+                      <img src="Images/Svg/Cart.svg" alt="Error" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tranding-product-text">
+              Men Henley Nec Full Sleeve Red Wine
+            </div>
+            <div class="text-center">
+              <span class="price-text">₹399</span>
+              <span class="dicount-price-text">₹1299</span>
+            </div>
+            <div class="main-size-box">
+              <div class="size-box">S</div>
+              <div class="size-box">M</div>
+              <div class="size-box">L</div>
+              <div class="size-box">XL</div>
+              <div class="size-box">XXL</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="main-product-card">
+            <div class="tranding-card">
+              <img
+                src="Images/Products/Rectangle-4.png"
+                alt="Men Henley Nec Full Sleeve Red Wine"
+              />
+              <div class="social-container">
+                <div class="tranding-card-svg">
+                  <div class="product-carts">
+                    <div class="social-image">
+                      <img src="Images/Svg/Heart.svg" alt="Error" />
+                    </div>
+                  </div>
+                  <div class="product-carts">
+                    <div class="social-image">
+                      <img src="Images/Svg/Share.svg" alt="Error" />
+                    </div>
+                  </div>
+                  <div class="product-carts">
+                    <div class="social-image">
+                      <img src="Images/Svg/Cart.svg" alt="Error" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tranding-product-text">
+              Men Henley Nec Full Sleeve Red Wine
+            </div>
+            <div class="text-center">
+              <span class="price-text">₹399</span>
+              <span class="dicount-price-text">₹1299</span>
+            </div>
+            <div class="main-size-box">
+              <div class="size-box">S</div>
+              <div class="size-box">M</div>
+              <div class="size-box">L</div>
+              <div class="size-box">XL</div>
+              <div class="size-box">XXL</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="main-product-card">
+            <div class="tranding-card">
+              <img
+                src="Images/Products/Rectangle-5.png"
+                alt="Men Henley Nec Full Sleeve Red Wine "
+                srcset=""
+              />
+              <div class="social-container">
+                <div class="trading-card-svg">
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Heart.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Share.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Cart.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tranding-product-text">
+              Men Henley Nec Full Sleeve Red Wine
+            </div>
+            <div class="text-center">
+              <span class="price-text">₹399</span>
+              <span class="discount-price-text">₹1299</span>
+            </div>
+            <div class="main-size-box">
+              <div class="size-box">S</div>
+              <div class="size-box">M</div>
+              <div class="size-box">L</div>
+              <div class="size-box">XL</div>
+              <div class="size-box">XXL</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="main-product-card">
+            <div class="tranding-card">
+              <img src="Images/Products/Rectangle-6.png" alt="" srcset="" />
+              <div class="social-container">
+                <div class="trading-card-svg">
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Heart.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Share.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Cart.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tranding-product-text">
+              Men Henley Nec Full Sleeve Red Wine
+            </div>
+            <div class="text-center">
+              <span class="price-text">₹399</span>
+              <span class="discount-price-text">₹1299</span>
+            </div>
+            <div class="main-size-box">
+              <div class="size-box">S</div>
+              <div class="size-box">M</div>
+              <div class="size-box">L</div>
+              <div class="size-box">XL</div>
+              <div class="size-box">XXL</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="main-product-card">
+            <div class="tranding-card">
+              <img src="Images/Products/Rectangle-3.png" alt="" srcset="" />
+              <div class="social-container">
+                <div class="trading-card-svg">
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Heart.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Share.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Cart.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tranding-product-text">
+              Men Henley Nec Full Sleeve Red Wine
+            </div>
+            <div class="text-center">
+              <span class="price-text">₹399</span>
+              <span class="discount-price-text">₹1299</span>
+            </div>
+            <div class="main-size-box">
+              <div class="size-box">S</div>
+              <div class="size-box">M</div>
+              <div class="size-box">L</div>
+              <div class="size-box">XL</div>
+              <div class="size-box">XXL</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="main-product-card">
+            <div class="tranding-card">
+              <img src="Images/Products/Rectangle-4.png" alt="" srcset="" />
+              <div class="social-container">
+                <div class="trading-card-svg">
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Heart.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Share.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Cart.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tranding-product-text">
+              Men Henley Nec Full Sleeve Red Wine
+            </div>
+            <div class="text-center">
+              <span class="price-text">₹399</span>
+              <span class="discount-price-text">₹1299</span>
+            </div>
+            <div class="main-size-box">
+              <div class="size-box">S</div>
+              <div class="size-box">M</div>
+              <div class="size-box">L</div>
+              <div class="size-box">XL</div>
+              <div class="size-box">XXL</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="main-product-card">
+            <div class="tranding-card">
+              <img src="Images/Products/Rectangle-5.png" alt="" srcset="" />
+              <div class="social-container">
+                <div class="trading-card-svg">
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Heart.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Share.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Cart.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tranding-product-text">
+              Men Henley Nec Full Sleeve Red Wine
+            </div>
+            <div class="text-center">
+              <span class="price-text">₹399</span>
+              <span class="discount-price-text">₹1299</span>
+            </div>
+            <div class="main-size-box">
+              <div class="size-box">S</div>
+              <div class="size-box">M</div>
+              <div class="size-box">L</div>
+              <div class="size-box">XL</div>
+              <div class="size-box">XXL</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="main-product-card">
+            <div class="tranding-card">
+              <img src="Images/Products/Rectangle-6.png" alt="" srcset="" />
+              <div class="social-container">
+                <div class="trading-card-svg">
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Heart.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Share.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                  <div class="product-cart">
+                    <div class="social-image">
+                      <img src="Images/Svg/Cart.svg" alt="" srcset="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tranding-product-text">
+              Men Henley Nec Full Sleeve Red Wine
+            </div>
+            <div class="text-center">
+              <span class="price-text">₹399</span>
+              <span class="discount-price-text">₹1299</span>
+            </div>
+            <div class="main-size-box">
+              <div class="size-box">S</div>
+              <div class="size-box">M</div>
+              <div class="size-box">L</div>
+              <div class="size-box">XL</div>
+              <div class="size-box">XXL</div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
   </body>
 </html>
