--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <div class="row gy-5">
 
         <div class="col-md-3">
-          <div class="main-product-card">
+          <div class="main-product-card">      
             <div class="tranding-card">
               <img
                 src="Images/Products/Rectangle-3.png"
@@ -243,28 +243,27 @@
         </div>
 
         <div class="col-md-3">
-          <div class="main-product-card">
+          <div class="main-product-card">      
             <div class="tranding-card">
               <img
                 src="Images/Products/Rectangle-5.png"
-                alt="Men Henley Nec Full Sleeve Red Wine "
-                srcset=""
+                alt="Men Henley Nec Full Sleeve Red Wine"
               />
               <div class="social-container">
-                <div class="trading-card-svg">
-                  <div class="product-cart">
+                <div class="tranding-card-svg">
+                  <div class="product-carts">
                     <div class="social-image">
-                      <img src="Images/Svg/Heart.svg" alt="" srcset="" />
+                      <img src="Images/Svg/Heart.svg" alt="Error" />
                     </div>
                   </div>
-                  <div class="product-cart">
+                  <div class="product-carts">
                     <div class="social-image">
-                      <img src="Images/Svg/Share.svg" alt="" srcset="" />
+                      <img src="Images/Svg/Share.svg" alt="Error" />
                     </div>
                   </div>
-                  <div class="product-cart">
+                  <div class="product-carts">
                     <div class="social-image">
-                      <img src="Images/Svg/Cart.svg" alt="" srcset="" />
+                      <img src="Images/Svg/Cart.svg" alt="Error" />
                     </div>
                   </div>
                 </div>
@@ -275,7 +274,7 @@
             </div>
             <div class="text-center">
               <span class="price-text">₹399</span>
-              <span class="discount-price-text">₹1299</span>
+              <span class="dicount-price-text">₹1299</span>
             </div>
             <div class="main-size-box">
               <div class="size-box">S</div>
@@ -292,18 +291,18 @@
             <div class="tranding-card">
               <img src="Images/Products/Rectangle-6.png" alt="" srcset="" />
               <div class="social-container">
-                <div class="trading-card-svg">
-                  <div class="product-cart">
+                <div class="tranding-card-svg">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Heart.svg" alt="" srcset="" />
                     </div>
                   </div>
-                  <div class="product-cart">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Share.svg" alt="" srcset="" />
                     </div>
                   </div>
-                  <div class="product-cart">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Cart.svg" alt="" srcset="" />
                     </div>
@@ -333,18 +332,18 @@
             <div class="tranding-card">
               <img src="Images/Products/Rectangle-3.png" alt="" srcset="" />
               <div class="social-container">
-                <div class="trading-card-svg">
-                  <div class="product-cart">
+                <div class="tranding-card-svg">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Heart.svg" alt="" srcset="" />
                     </div>
                   </div>
-                  <div class="product-cart">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Share.svg" alt="" srcset="" />
                     </div>
                   </div>
-                  <div class="product-cart">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Cart.svg" alt="" srcset="" />
                     </div>
@@ -374,18 +373,18 @@
             <div class="tranding-card">
               <img src="Images/Products/Rectangle-4.png" alt="" srcset="" />
               <div class="social-container">
-                <div class="trading-card-svg">
-                  <div class="product-cart">
+                <div class="tranding-card-svg">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Heart.svg" alt="" srcset="" />
                     </div>
                   </div>
-                  <div class="product-cart">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Share.svg" alt="" srcset="" />
                     </div>
                   </div>
-                  <div class="product-cart">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Cart.svg" alt="" srcset="" />
                     </div>
@@ -415,18 +414,18 @@
             <div class="tranding-card">
               <img src="Images/Products/Rectangle-5.png" alt="" srcset="" />
               <div class="social-container">
-                <div class="trading-card-svg">
-                  <div class="product-cart">
+                <div class="tranding-card-svg">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Heart.svg" alt="" srcset="" />
                     </div>
                   </div>
-                  <div class="product-cart">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Share.svg" alt="" srcset="" />
                     </div>
                   </div>
-                  <div class="product-cart">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Cart.svg" alt="" srcset="" />
                     </div>
@@ -456,18 +455,18 @@
             <div class="tranding-card">
               <img src="Images/Products/Rectangle-6.png" alt="" srcset="" />
               <div class="social-container">
-                <div class="trading-card-svg">
-                  <div class="product-cart">
+                <div class="tranding-card-svg">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Heart.svg" alt="" srcset="" />
                     </div>
                   </div>
-                  <div class="product-cart">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Share.svg" alt="" srcset="" />
                     </div>
                   </div>
-                  <div class="product-cart">
+                  <div class="product-carts">
                     <div class="social-image">
                       <img src="Images/Svg/Cart.svg" alt="" srcset="" />
                     </div>
